src/index.css
@import "tailwindcss";

@theme {
  --font-inter: "Inter", sans-serif;
  --font-wix-madefor-display: "Wix Madefor Display", sans-serif;

  --color-primary: #4160ff;
  --color-dark-primary: #213269;
  --color-light-gray: #e9e9e9;
  --color-my-light-blue: #E3EBFF;
  --color-my-red: #ff1500;
  --color-my-purple: #170F49;
  --color-my-half-purple: #6F6C8F;
  --color-my-yellow: #FFC107;

  --animate-marquee: marquee 5s linear infinite;
  @keyframes marquee {
    0% {
      transform: translateX(0%);
    } 
    100% {
      transform: translateX(-50%)
    }
  }
}

._no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

._select-no-arrow {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  background-image: none !important;
}

._select-no-arrow::ms-expand {
  display: none;
}

.next-btn {
  background: #000;
}

details > summary {
  list-style: none;
}
details > summary::-webkit-details-marker {
  display: none;
}

